# HDF5 standalone tests src directory Makefile
## Run bin/reconfigure script to generate a Makefile.in from this file

# HDF5_PATH=../../hdf5

## Add include directories here, if any
# INCLUDES=-I$(HDF5_PATH)/src

## Add programs to be compiled here
# check_PROGRAMS=foo bar baz

## If program sources are not a single .c file (baz.c), list
## them like so:
# foo_SOURCES: source1.c source2.c source3.c
# bar_SOURCES: source1.c bar.c

## Add any libraries that need to be linked into these executables here
# LDADD=$(HDF5_PATH)/src/libhdf5.la

